--- a/package.json
+++ b/package.json
@@ -6,6 +6,18 @@
   "author": "Dorian Buck <[dorianbuck@gmail.com]>",
   "license": "MIT",
   "devDependencies": {
-    "cypress": "^8.3.0"
+    "chai": "^4.3.4",
+    "cypress": "^8.3.0",
+    "mocha": "^9.0.3"
+  },
+  "dependencies": {
+    "browser-sync": "^2.27.4",
+    "superstatic": "^7.1.0"
+  },
+  "scripts": {
+    "start": "superstatic src --port 3001 ",
+    "start:hot": "node server.js",
+    "cy:open": "yarn start & cypress open",
+    "test": "mocha spec"
   }
 }
